# cmake-best-practices

./: CMakeLists.txt
cmake/: test-cmake-headeronly-config.cmake.in  test-cmake-library-config.cmake.in
cmake/modules/: BuildHelpers.cmake  OptionHelpers.cmake  ProjectConfig.cmake  executableFiles.cmake  headeronlyFiles.cmake  libraryFiles.cmake
include/headeronly/: CMakeLists.txt  headeronly.h
include/test-cmake-headeronly/: CMakeLists.txt  test_cmake_headeronly.h
src/executable/: CMakeLists.txt
src/test-cmake-library/: CMakeLists.txt  test_cmake_library.cpp  test_cmake_library.h
